syntax = "proto3";

package vn.techres.microservice.grpc.nodejs_food_channel_processor.food_channel_setting;

service FoodChannelSettingService {
    rpc updateSettingFoodChannelBranch (UpdateSettingFoodChannelBranchRequest) returns (BaseEmptyResponse);
    rpc updateSettingFoodChannelRestaurantBrand (UpdateSettingFoodChannelRestaurantBrandRequest) returns (BaseEmptyResponse);
}

message Empty {
}

message BaseEmptyResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

// ---------- updateSettingFoodChannelBranch ---------------

message UpdateSettingFoodChannelBranchRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 quantity_slot_SHF = 4;
    int32 quantity_slot_GRF = 5;
    int32 quantity_slot_BEF = 6;
}

// ---------- updateSettingFoodChannelRestaurantBrand ---------------

message UpdateSettingFoodChannelRestaurantBrandRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 quantity_account_SHF = 3;
    int32 quantity_account_GRF = 4;
    int32 quantity_account_BEF = 5;
}
